# flightradar-databricks

./: .gitignore  README.md  README_MEDALLION_TESTING.md  databricks.yml  pyproject.toml
.github/workflows/: dev.yml  staging.yml
fixtures/: 2025-07-20_17-50-14_hkg_flights.json
resources/: flightradar_databricks.job.yml  flightradar_databricks.pipeline.yml
src/: dlt_pipeline.ipynb
