[project]
name = "flightradar_databricks"
version = "0.0.1"
authors = [{ name = "Michael Cheung" }]
requires-python = ">= 3.11"

[project.optional-dependencies]
dev = [
    "pytest",

    # Code completion support for DLT
    "databricks-dlt",

    # databricks-connect for remote testing - connects to Databricks cluster
    # "databricks-connect>=15.4,<15.5",  # Match your Databricks Runtime version
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flightradar_databricks"]

[project.scripts]
main = "flightradar_databricks.main:main"
